--- a/SAE GAN.ipynb
+++ b/SAE GAN.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "    def get_loss(self, x_pred, x_true):\n",
     "        loss = self.loss_fn(x_pred, x_true)\n",
-    "        loss += self.l1 * (torch.norm(self.E.weight, p=1) + torch.norm(self.D.weight, p=1))\n",
+    "        loss += self.l1 * torch.norm(self.E.weight, p=1)\n",
     "        loss.backward()\n",
     "        self.optimizer.step()\n",
     "        return loss.item()"
